grammar.js
  source_file: $ => repeat($._description),

  _description: $ => prec('_description', choice(
    $.module_declaration,
    $.udp_declaration,
    $.interface_declaration,
    $.program_declaration,
    $.package_declaration,
    seq(repeat($.attribute_instance), choice($._package_item, $.bind_directive)),
    $._library_text, // Includes $.config_declaration as one of its branches
    $.snippets, // Out of LRM (inlined)
  )),

  _function_data_type_or_implicit: $ => choice(
    $.data_type_or_void,
    $.implicit_data_type
  ),

  function_declaration: $ => seq(
    'function',
    optional($.dynamic_override_specifiers),
    optional($.lifetime),
    $.function_body_declaration
  ),

  function_body_declaration: $ => seq(
    optional($._function_data_type_or_implicit),
    optchoice(seq($.interface_identifier, '.'), $.class_scope),
    field('name', $.function_identifier),
    choice(
      seq(';', repeat($.tf_item_declaration)),
      seq('(', optional($.tf_port_list), ')', ';', repeat($.block_item_declaration))
    ),
    repeat($.function_statement_or_null),
    enclosing('endfunction', $.function_identifier)
  ),

  blocking_assignment: $ => choice(
    seq($.variable_lvalue, '=', $.delay_or_event_control, $.expression),
    seq($.nonrange_variable_lvalue, '=', $.dynamic_array_new),
    seq(
      optchoice(seq($.implicit_class_handle, '.'), $.class_scope, $.package_scope),
      $.hierarchical_variable_identifier, optional($.select), '=', $.class_new
    ),
    $.operator_assignment,
    $.inc_or_dec_expression,
  ),

  operator_assignment: $ => seq($.variable_lvalue, $.assignment_operator, $.expression),

  assignment_operator: $ => choice(
    '=', '+=', '-=', '*=', '/=', '%=', '&=', '|=', '^=', '<<=', '>>=', '<<<=', '>>>='
  ),

  statement: $ => seq(
    optseq(field('block_name', $.block_identifier), ':'),
    repeat($.attribute_instance),
    $.statement_item
  ),

  statement_item: $ => prec('statement_item', choice(
    seq($.blocking_assignment, ';'),
    seq($.nonblocking_assignment, ';'),
    seq($.procedural_continuous_assignment, ';'),
    $.case_statement,
    $.conditional_statement,
    $.subroutine_call_statement,
    $.disable_statement,
    $.event_trigger,
    $.loop_statement,
    $.jump_statement,
    $.par_block,
    $.procedural_timing_control_statement,
    $.seq_block,
    $.wait_statement,
    $._procedural_assertion_statement,
    prec.dynamic(-1, seq($.clocking_drive, ';')), // NBA > clocking drive (outside of a clocking block)
    $.randsequence_statement,
    $.randcase_statement,
    $.expect_property_statement,
    $._directives, // Out of LRM
  )),

  function_statement: $ => $.statement,

  function_statement_or_null: $ => choice(
    $.function_statement,
    seq(repeat($.attribute_instance), ';')
  ),


// ** A.6.5 Timing control statements
  _assignment_pattern_expression_type: $ => prec('_assignment_pattern_expression_type', choice(
    $.ps_type_identifier,
    $.ps_parameter_identifier,
    $.integer_atom_type,
    $.type_reference
  )),

  _constant_assignment_pattern_expression: $ => prec('_constant_assignment_pattern_expression', $.assignment_pattern_expression),

  _procedural_assertion_statement: $ => prec('_procedural_assertion_statement', choice(
    $._concurrent_assertion_statement,
    $._immediate_assertion_statement,
    $.checker_instantiation
  )),

  constant_expression: $ => choice(
    $.constant_primary,
    $._constant_unary_expression,
    $._constant_binary_expression,
    $._constant_conditional_expression,
    alias($._inside_constant_expression, $.inside_expression), // Out of LRM
    $.text_macro_usage, // Out of LRM
  ),

  _constant_range_expression: $ => choice(
    $.constant_expression,
    $._constant_part_select_range
  ),

  constant_range: $ => seq($.constant_expression, ':', $.constant_expression),

  expression: $ => prec('expression', choice(
    $.primary,
    $._unary_expression,
    $.inc_or_dec_expression,
    $._parenthesized_expression,
    $._binary_expression,
    $.conditional_expression,
    $.inside_expression,
    $.tagged_union_expression,
    $.text_macro_usage,               // Out of LRM
    $.file_or_line_compiler_directive // Out of LRM
  )),

  _inside_constant_expression: $ => prec.left(PREC.RELATIONAL, seq(
    $.constant_expression, 'inside', '{', $.range_list, '}'
  )),

  _unary_expression: $ => unary_expr($, $.unary_operator, $.primary),

  _binary_expression: $ => binary_expr($, BINARY_OP_TABLE, $.expression),

  _parenthesized_expression: $ => paren_expr($.operator_assignment),

  _constant_unary_expression: $ => unary_expr($, $.unary_operator, $.constant_primary),

  _constant_binary_expression: $ => binary_expr($, BINARY_OP_TABLE, $.constant_expression),

  _constant_conditional_expression: $ => conditional_expr($, $.constant_expression, $.constant_expression),

  constant_primary: $ => prec('constant_primary', choice(
    $.primary_literal,
    seq($.ps_parameter_identifier, optional($.constant_select)),
    // seq($.specparam_identifier, optseq('[', $._constant_range_expression, ']')),
    // $.genvar_identifier,
    // seq($.formal_port_identifier, optional($.constant_select)),
    // seq(optchoice($.package_scope, $.class_scope), $.enum_identifier),
    $.empty_unpacked_array_concatenation,
    seq($.constant_concatenation, optseq('[', $._constant_range_expression, ']')),
    seq($.constant_multiple_concatenation, optseq('[', $._constant_range_expression, ']')),
    $.constant_function_call, // Out of LRM: original was 'seq($.constant_function_call, optseq('[', $._constant_range_expression, ']'))'
    // $._constant_let_expression, // No need to add since it's syntax is the same as a tf_call/constant_function_call (true ambiguity that adds conflicts)
    paren_expr($.constant_mintypmax_expression),
    $.constant_cast,
    $._constant_assignment_pattern_expression,
    $.type_reference,
    '$', // Out of LRM, required for 7.10.4 (bullet point 47): The $ primary shall be legal only in a select for a queue variable.
    'null'
  )),

  primary: $ => prec('primary', choice(
    $.primary_literal,
    choice(
      seq(
        optchoice($.class_qualifier, $.package_scope),
        $.hierarchical_identifier,
        optional($.select)
      ),
      // INFO: The one below is a subgroup of the one above, however it doesn't work well
      // possibly because of some bad specified precedence/conflict. For the time being, adding
      // the option below fixes things and seems to work well (at the expense of maybe
      // some more complexity in the parser)
      seq($.implicit_class_handle, optional($.select)), // Out of LRM, but used as a workaround
    ),
    $.empty_unpacked_array_concatenation,
    seq($.concatenation, optseq('[', $.range_expression, ']')),
    seq($.multiple_concatenation, optseq('[', $.range_expression, ']')),
    $.function_subroutine_call,
    // $.let_expression,  // No need to add since its syntax is the same as a tf_call/subroutine_call (true ambiguity that adds conflicts)
    paren_expr($.mintypmax_expression),
    $.cast,
    $.assignment_pattern_expression,
    $.streaming_concatenation,
    // $.sequence_method_call, //  Remove to narrow conflicts
    'this',
    '$',
    'null',
    '$root',          // Out of LRM, needed for sv-tests/chapter-20/20.14--coverage
    '\'{}',           // Out of LRM, fixes errors in some UVM files
    $.type_reference, // Out of LRM, should be for type comparison (6.23)
  )),

  // Modified to avoid matching empty string
  primary_literal: $ => choice(
    $._number,
    $.time_literal,
    $.unbased_unsized_literal,
    $.string_literal,
  ),

  _constant_let_expression: $ => $.let_expression,


// ** A.8.5 Expression left-side values
  variable_lvalue: $ => prec('variable_lvalue', choice(
    seq(
      // $.class_qualifier Out of LRM in optchoice: needed for static class access
      optchoice(seq($.implicit_class_handle, '.'), $.package_scope, $.class_qualifier),
      $.hierarchical_variable_identifier,
      optional($.select)
    ),
    seq('{', commaSep1($.variable_lvalue), '}'),
    seq(optional($._assignment_pattern_expression_type), $.assignment_pattern_variable_lvalue),
    $.streaming_concatenation,
    $.text_macro_usage // Out of LRM
  )),

  _number: $ => choice($.integral_number, $.real_number),

  integral_number: $ => choice(
    $.decimal_number,
    $.octal_number,
    $.binary_number,
    $.hex_number
  ),

  decimal_number: $ => prec('decimal_number', choice(
    $.unsigned_number,
    seq(
      field('size', optional($._size)),
      field('base', $.decimal_base),
      field('value', choice(
        $.unsigned_number,
        seq($.x_digit, token.immediate(/_*/)),
        seq($.z_digit, token.immediate(/_*/)),
      ))
    )
  )),

  _size: $ => prec('_size', $.unsigned_number),

  unsigned_number: $ => token(seq(
    /[0-9]/,  // $.decimal_digit,
    /[0-9_]*/ // repeat(choice(/_/, $.decimal_digit))
  )),

  function_identifier: $ => $._identifier,
  hierarchical_identifier: $ => prec('hierarchical_identifier', seq(
    optseq('$root', '.'),
    repeat(prec('hierarchical_identifier', seq(
      choice($._identifier, $.text_macro_usage), // Slightly out of LRM to support use of $.text_macro_usage as part of hierarchical identifiers
      optional($.constant_bit_select),
      '.'))) ,
    $._identifier
  )),

  _identifier: $ => choice(
    $.simple_identifier,
    $.escaped_identifier
  ),

  member_identifier: $ => $._identifier,
  simple_identifier: $ => /[a-zA-Z_][a-zA-Z0-9_$]*/,
  _directives: $ => prec('_directives', choice(
    $.resetall_compiler_directive,
    $.include_compiler_directive,
    $.text_macro_definition,
    $.text_macro_usage,
    $.undefine_compiler_directive,
    $.undefineall_compiler_directive,
    $.conditional_compilation_directive,
    $.timescale_compiler_directive,
    $.default_nettype_compiler_directive,
    $.unconnected_drive_compiler_directive,
    $.nounconnected_drive_compiler_directive,
    $.celldefine_compiler_directive,
    $.endcelldefine_compiler_directive,
    $.pragma,
    $.line_compiler_directive,
    $.file_or_line_compiler_directive,
    $.keywords_directive,
    $.endkeywords_directive
  )),


// ** 22-3 `resetall
